add get detailed family endpoint