@@ -1,12 +1,14 @@
 package com.zsirosdeszkasok.wedding.service;
 
 import com.zsirosdeszkasok.wedding.model.Family;
+import com.zsirosdeszkasok.wedding.model.FamilyChange;
 import com.zsirosdeszkasok.wedding.model.Person;
+import com.zsirosdeszkasok.wedding.model.PersonChange;
+import com.zsirosdeszkasok.wedding.service.dto.FamilyChangeDto;
 import com.zsirosdeszkasok.wedding.service.dto.FamilyDto;
+import com.zsirosdeszkasok.wedding.service.dto.PersonChangeDto;
 import com.zsirosdeszkasok.wedding.service.dto.PersonDto;
 import org.springframework.stereotype.Service;
-
-import java.util.stream.Collectors;
 
 @Service
 public class MapperService {
@@ -14,7 +16,7 @@ public class MapperService {
     public FamilyDto map(Family family) {
         return new FamilyDto(
                 family.getId(), 
-                family.getMembers().stream().map(this::map).collect(Collectors.toList()),
+                family.getMembers().stream().map(this::map).toList(),
                 family.getComment()
         );
     }
@@ -31,6 +33,24 @@ public class MapperService {
                 personDto.name(),
                 family,
                 personDto.hasAccepted()
+        );
+    }
+    public FamilyChangeDto map(FamilyChange familyChange) {
+        return new FamilyChangeDto(
+                familyChange.getPersonChanges().stream().map(personChange -> this.map(
+                        personChange,
+                        personChange.getPerson().getName()
+                )).toList(),
+                familyChange.getNewComment(),
+                familyChange.getChangeTime()
+        );
+    }
+
+    public PersonChangeDto map(PersonChange personChange, String name) {
+        return new PersonChangeDto(
+                name,
+                personChange.getNewHasAccepted(),
+                personChange.getWasCreated()
         );
     }
 }
